perfectly set up the card section

--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
         <section class="px-4 md:px-6 lg:p-0">
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">
-                <div class="card w-80 bg-white rounded-lg border-2 border-[#1212121a]">
-                    <figure><img src="./images/fruit6.png" alt="Shoes" class="py-12" /></figure>
+                <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
+                    <figure><img src="./images/fruit6.png" alt="" class="py-12" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
                         <p class="text-center font-medium text-base text-second">Apples</p>
-                        <div class="rating rating-lg rating-half py-3">
+                        <div class="rating rating-lg rating-half py-3 justify-center">
                             <input type="radio" name="rating-10-0" class="rating-hidden" />
                             <input type="radio" name="rating-10-1" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-2" class="bg-third mask mask-star-2 mask-half-2" />
@@ -281,12 +281,12 @@
                             <input type="radio" name="rating-10-9" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-10" class="bg-third mask mask-star-2 mask-half-2" />
                         </div>
-                        <label for="my_modal_6" class="text-third text-lg font-bold text-center pt-2">Details</label>
-                        <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                        <label for="my_modal_1" class="text-third text-lg font-bold text-center pt-2">Details</label>
+                        <input type="checkbox" id="my_modal_1" class="modal-toggle" />
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit6.png" alt="Shoes" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit6.png" alt="" class="py-12" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Apples</h2>
@@ -318,9 +318,9 @@
                                     </div>
                                 </div>
                                 <div class="modal-action justify-center">
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_1"
                                         class="border-2 border-[#f85559] px-2 md:px-3 py-1 md:py-3 text-[#F85559] font-bold text-sm md:text-xl rounded-lg">Close!</label>
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_1"
                                         class="px-2 md:px-3 py-1 md:py-3 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Buy
                                         Now</label>
                                 </div>
@@ -328,13 +328,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="card w-80 bg-white rounded-lg border-2 border-[#1212121a]">
-                    <figure><img src="./images/fruit7.png" alt="Shoes" class="py-12" /></figure>
+                <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
+                    <figure><img src="./images/fruit7.png" alt="" class="py-12" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
                         <p class="text-center font-medium text-base text-second">Orange</p>
-                        <div class="rating rating-lg rating-half py-3">
+                        <div class="rating rating-lg rating-half py-3 justify-center">
                             <input type="radio" name="rating-10-22" class="rating-hidden" />
                             <input type="radio" name="rating-10-23" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-24" class="bg-third mask mask-star-2 mask-half-2" />
@@ -348,12 +348,12 @@
                             <input type="radio" name="rating-10-31" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-32" class="bg-third mask mask-star-2 mask-half-2" />
                         </div>
-                        <label for="my_modal_6" class="text-third text-lg font-bold text-center pt-2">Details</label>
-                        <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                        <label for="my_modal_2" class="text-third text-lg font-bold text-center pt-2">Details</label>
+                        <input type="checkbox" id="my_modal_2" class="modal-toggle" />
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit7.png" alt="Shoes" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit7.png" alt="" class="py-12" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Orange</h2>
@@ -385,9 +385,9 @@
                                     </div>
                                 </div>
                                 <div class="modal-action justify-center">
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_2"
                                         class="border-2 border-[#f85559] px-2 md:px-3 py-1 md:py-3 text-[#F85559] font-bold text-sm md:text-xl rounded-lg">Close!</label>
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_2"
                                         class="px-2 md:px-3 py-1 md:py-3 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Buy
                                         Now</label>
                                 </div>
@@ -395,13 +395,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="card w-80 bg-white rounded-lg border-2 border-[#1212121a]">
-                    <figure><img src="./images/fruit8.png" alt="Shoes" class="py-12" /></figure>
+                <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
+                    <figure><img src="./images/fruit8.png" alt="" class="py-12" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
                         <p class="text-center font-medium text-base text-second">Red Dragon</p>
-                        <div class="rating rating-lg rating-half py-3">
+                        <div class="rating rating-lg rating-half py-3 justify-center">
                             <input type="radio" name="rating-10-44" class="rating-hidden" />
                             <input type="radio" name="rating-10-45" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-46" class="bg-third mask mask-star-2 mask-half-2" />
@@ -416,12 +416,12 @@
                             <input type="radio" name="rating-10-54" class="bg-third mask mask-star-2 mask-half-2" />
                         </div>
 
-                        <label for="my_modal_6" class="text-third text-lg font-bold text-center pt-2">Details</label>
-                        <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                        <label for="my_modal_3" class="text-third text-lg font-bold text-center pt-2">Details</label>
+                        <input type="checkbox" id="my_modal_3" class="modal-toggle" />
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit8.png" alt="Shoes" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit8.png" alt="" class="py-12" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Red Dragon</h2>
@@ -453,9 +453,9 @@
                                     </div>
                                 </div>
                                 <div class="modal-action justify-center">
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_3"
                                         class="border-2 border-[#f85559] px-2 md:px-3 py-1 md:py-3 text-[#F85559] font-bold text-sm md:text-xl rounded-lg">Close!</label>
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_3"
                                         class="px-2 md:px-3 py-1 md:py-3 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Buy
                                         Now</label>
                                 </div>
@@ -463,13 +463,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="card w-80 bg-white rounded-lg border-2 border-[#1212121a]">
-                    <figure><img src="./images/fruit9.png" alt="Shoes" class="py-12" /></figure>
+                <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
+                    <figure><img src="./images/fruit9.png" alt="" class="py-12" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
                         <p class="text-center font-medium text-base text-second">Banana</p>
-                        <div class="rating rating-lg rating-half py-3">
+                        <div class="rating rating-lg rating-half py-3 justify-center">
                             <input type="radio" name="rating-10-66" class="rating-hidden" />
                             <input type="radio" name="rating-10-67" class="bg-third mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10-68" class="bg-third mask mask-star-2 mask-half-2" />
@@ -484,12 +484,12 @@
                             <input type="radio" name="rating-10-76" class="bg-third mask mask-star-2 mask-half-2" />
                         </div>
 
-                        <label for="my_modal_6" class="text-third text-lg font-bold text-center pt-2">Details</label>
-                        <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                        <label for="my_modal_4" class="text-third text-lg font-bold text-center pt-2">Details</label>
+                        <input type="checkbox" id="my_modal_4" class="modal-toggle" />
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit9.png" alt="Shoes" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit9.png" alt="" class="py-12" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Banana</h2>
@@ -521,9 +521,9 @@
                                     </div>
                                 </div>
                                 <div class="modal-action justify-center">
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_4"
                                         class="border-2 border-[#f85559] px-2 md:px-3 py-1 md:py-3 text-[#F85559] font-bold text-sm md:text-xl rounded-lg">Close!</label>
-                                    <label for="my_modal_6"
+                                    <label for="my_modal_4"
                                         class="px-2 md:px-3 py-1 md:py-3 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Buy
                                         Now</label>
                                 </div>
@@ -536,6 +536,20 @@
             <div class=" text-center mt-12">
                 <button class="bg-third text-white px-7 py-5 rounded-lg">Shop All</button>
             </div>
+        </section>
+
+        <!-- Meet the team section -->
+        <section>
+            <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-md">
+                    <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    <button class="btn btn-primary">Get Started</button>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
 
