--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
             </div>
         </section>
 
-        <!-- Meet the team section -->
-        <section class="mt-28 mx-10 lg:mx-0">
+        <!-- Meet the team section started-->
+        <section class="my-28 mx-10 lg:mx-0">
             <div class="hero" style="background-image: url(./images/team.png);">
                 <div class="hero-overlay bg-opacity-70"></div>
                 <div class="hero-content text-center text-neutral-content">
@@ -819,6 +819,15 @@
                 </div>
             </div>
 
+        </section>
+
+        <!-- Why chosse us section started-->
+        <section>
+            <div>
+                <h1 class="text-center font-extrabold text-5xl text-primary mb-6">Why Choose Us</h1>
+                <p class="text-base text-center font-medium text-secondary">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                </p>
+            </div>
         </section>
     </main>
 
