why choose us section done

--- a/index.html
+++ b/index.html
@@ -821,8 +821,8 @@
 
         </section>
 
-        <!-- Why chosse us section started-->
-        <section>
+        <!-- Why chose us section started-->
+        <section class="mx-10 mb-12">
             <div>
                 <h1 class="text-center font-extrabold text-5xl text-primary mb-6">Why Choose Us</h1>
                 <p class="text-base text-center font-medium text-secondary">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
