--- a/index.html
+++ b/index.html
@@ -1064,9 +1064,9 @@
     <footer class="footer footer-center p-10 bg-[#121212] text-white rounded">
         <div class="flex justify-between lg:justify-center">
             <img src="./images/logo.png" alt="">
-            <a class="btn btn-ghost normal-case text-xl text-black lg:text-white font-bold">Fruit Burst</a>
+            <a class="btn btn-ghost normal-case text-xl text-white font-bold">Fruit Burst</a>
         </div>
-        <div class="grid grid-flow-col gap-6">
+        <div class="grid grid-cols-4 md:grid-cols-6 gap-2 wrap">
             <a class="link link-hover">Home</a>
             <a class="link link-hover">About us</a>
             <a class="link link-hover">Shop</a>
