--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">
                 <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
-                    <figure><img src="./images/fruit6.png" alt="" class="py-12" /></figure>
+                    <figure><img src="./images/fruit6.png" alt="" class="py-6" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
@@ -286,7 +286,7 @@
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit6.png" alt="" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit6.png" alt="" class="py-6" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Apples</h2>
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
-                    <figure><img src="./images/fruit7.png" alt="" class="py-12" /></figure>
+                    <figure><img src="./images/fruit7.png" alt="" class="py-6" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
@@ -353,7 +353,7 @@
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit7.png" alt="" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit7.png" alt="" class="py-6" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Orange</h2>
@@ -396,7 +396,7 @@
                     </div>
                 </div>
                 <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
-                    <figure><img src="./images/fruit8.png" alt="" class="py-12" /></figure>
+                    <figure><img src="./images/fruit8.png" alt="" class="py-6" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
@@ -421,7 +421,7 @@
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit8.png" alt="" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit8.png" alt="" class="py-6" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Red Dragon</h2>
@@ -464,7 +464,7 @@
                     </div>
                 </div>
                 <div class="card w-96 md:w-80 bg-white rounded-lg border-2 border-[#1212121a] mx-auto">
-                    <figure><img src="./images/fruit9.png" alt="" class="py-12" /></figure>
+                    <figure><img src="./images/fruit9.png" alt="" class="py-6" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-[#121212] font-bold text-2xl border-b-2 border-b-[#1212121a] pb-5">
                             12.90$ - 18.85$</h2>
@@ -489,7 +489,7 @@
                         <div class="modal">
                             <div class="modal-box">
                                 <div class="card w-full bg-white rounded-lg">
-                                    <figure><img src="./images/fruit9.png" alt="" class="py-12" /></figure>
+                                    <figure><img src="./images/fruit9.png" alt="" class="py-6" /></figure>
                                     <div class="card-body">
                                         <h2 class="text-center text-[#121212] font-bold text-2xl pb-5">
                                             Banana</h2>
@@ -1061,12 +1061,12 @@
         </section>
     </main>
     <!-- Footer starts here -->
-    <footer class="footer footer-center p-10 bg-[#121212] text-white rounded">
+    <footer class="footer footer-center p-6 bg-[#121212] text-white rounded">
         <div class="flex justify-between lg:justify-center">
             <img src="./images/logo.png" alt="">
             <a class="btn btn-ghost normal-case text-xl text-white font-bold">Fruit Burst</a>
         </div>
-        <div class="grid grid-cols-4 md:grid-cols-6 gap-2 wrap">
+        <div class="grid grid-cols-6 gap-2">
             <a class="link link-hover">Home</a>
             <a class="link link-hover">About us</a>
             <a class="link link-hover">Shop</a>
