Full project done

--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
             <img src="./images/logo.png" alt="">
             <a class="btn btn-ghost normal-case text-xl text-white font-bold">Fruit Burst</a>
         </div>
-        <div class="grid grid-cols-6 gap-2">
+        <div class="grid grid-cols-4 md:grid-cols-6 gap-2">
             <a class="link link-hover">Home</a>
             <a class="link link-hover">About us</a>
             <a class="link link-hover">Shop</a>
